[package]
name = "warp-learn-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
futures-util = "0.3.29"
warp = "0.3"
log = "0.4.20"
pretty_env_logger = "0.5.0"